# IFmerge

./: .env  .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  QUICKSTART_ja.md  README.md  README_ja.md  USAGE.md  output.rar  pyproject.toml  requirements.txt
bat/: BAT_SCRIPTS_GUIDE.md  Install_dependencies.bat  config.json  quick_start.bat  run_merge.bat  verify_setup.bat
ebs_merger/: __init__.py  __main__.py  ai_classifier.py  ai_generator.py  cli.py  data_loader.py  if_grouper.py  matrix_exporter.py  merge_grouper.py  result_generator.py  similarity_calculator.py  template_filler.py
input/: ②_INPUT_EBS定義書の抽出結果.xlsx
output/: G003_出荷指示情報(機体番号SYS)エクスポートデータ_出荷指示（NEO他）エクスポート.xlsm  グルーピング結果_②_INPUT_EBS定義書の抽出結果.xlsx
template/: IF_Template.xlsm
